Creating ToDo Items

--- a/src/app/to-do-list/to-do-list.component.html
+++ b/src/app/to-do-list/to-do-list.component.html
@@ -21,5 +21,7 @@
       {{items?.isCompleted}}
     </div>
   </div>
-
+  <div fxLayout="row" fxFlex="1 1 100%" class="to-do-item" fxLayoutAlign="center center" (click)="createToDoItem()">
+   Add To-Do Item
+  </div>
 </div>
