--- a/src/app/to-do-item-create/to-do-item-create.component.html
+++ b/src/app/to-do-item-create/to-do-item-create.component.html
@@ -1,7 +1,7 @@
-<div fxLayout="column" fxFlex="1 1 100%">
-  <h3 fxLayout="row" fxFlex="1 1 100%">
+<div id="to-do-create" fxLayout="column" fxFlex="1 1 100%">
+  <mat-label class="create-label" fxLayout="row" fxFlex="1 1 100%">
     What needs to be done?
-  </h3>
+  </mat-label>
   <div fxLayout="row" fxFlex="1 1 100%">
     <mat-form-field >
       <mat-label>Title</mat-label>
